# Vein-Detection-and-Removal

./: .gitignore  README.md  localization.ipynb  object_detection_with_ssd.ipynb  py-help.py  requirments.txt  ssd_detector.ipynb  tf_object_detection_faster_rcnn.ipynb
.github/workflows/: python-app.yml
articles/: Article pool.md  README.md  Useful.md  Usefull.md  Useless.md
code/: CMakeLists.txt  README.md  database-creator.py  localizer.py
code/AddressBookExample/: CMakeLists.txt
code/AddressBookExample/inc/: addressbook.h  finddialog.h
code/AddressBookExample/src/: addressbook.cpp  finddialog.cpp  main.cpp
code/DragAndDropExample/: CMakeLists.txt
code/DragAndDropExample/inc/: draglabel.h  dragwidget.h
code/DragAndDropExample/src/: draglabel.cpp  dragwidget.cpp  main.cpp
code/inc/: addressbook.h
code/scripts/: clothes-classifier.py
code/src/: addressbook.cpp  main.cpp  shape_detection.cpp
code/tools/: image.py  interface.py
code/tools/filter/: equalize_filter.py  filter_mask.py  filter_pipe.py  gaussian_filter.py  mask.py  median_filter.py  new_filter.py
code/tools/filters/: abstract_filter.py  equalize_filter.py  gaussian_filter.py  median_filter.py  template.py
code/tools/utilities/: pipe.py
datasets/photos/: last.txt
datasets/photos/annotations/: person01_0.txt  person01_1.txt  person02_0.txt  person02_1.txt  person03_0.txt
docs/: README.md
